k8s/services/api-service/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: shopno-platform
  labels:
    app.kubernetes.io/name: api-service
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: api-service
